--- a/SideBar/index.html
+++ b/SideBar/index.html
@@ -22,7 +22,7 @@
             onclick="toggleMenu()"
           />
         </header>
-        <input type="text" placeholder="🔍 Buscar" />
+        <input type="text" placeholder="Buscar" />
 
         <div class="icon">
           <img src="/assets/aplicativos.svg" alt="" />
